@@ -4,7 +4,7 @@
   |  _| | |  __/>  <| |_) | (_| | (__|   <| |_| | |_) |
   |_|   |_|\___/_/\_\_.__/ \__,_|\___|_|\_\\__,_| .__/
                                                 |_|
- http://flexbackup.sourceforge.net
+ http://flexbackup.org
  README for version 0.9.9.1
 
 ----------------------------------------------------------------------
