@@ -23,12 +23,12 @@
       or grep reference, or "man 7 regex".  Simplistically, you probably
       mean to say ".*" instead of "*", and ".?" instead of "?".  Also,
       leave OFF the first part of a path that is the filesystem you
-      are archiving;  the exclude epxressions only match subdirectories of
+      are archiving;  the exclude epxressions only match sub-paths of
       the backup directory.
       </BLOCKQUOTE>
 
   <LI><I>
-      How do I archive multiple filesytems without redefining $filesystems
+      How do I archive multiple filesytems at once without redefining $filesystems
       in the configuration file?
       </I>
 
@@ -70,7 +70,4 @@
 </OL>
 
 <HR>
-<!-- HHMTS START -->
-Last modified: Fri Oct  8 11:27:45 MST 1999
-<!-- HHMTS END -->
-</BODY> </HTML>
+
