@@ -8,17 +8,28 @@
 <IMG SRC="logo.png" ALT="Flexbackup">
 <H3>Flexible backup script.</H3>
 
-<P>See the <A HREF="README">README</A> file for more information.<BR>
-I also have a <A HREF="TODO">to-do</A> list and a
-list of <A HREF="CHANGES">changes</A>
-<P>
 
 <B>Version 0.9.9.1</B> (going to call this 1.0 if no major problems pop up)
 <UL>
-<LI><A
-HREF="tarball/flexbackup-0.9.9.1.tar.gz">flexbackup-0.9.9.1.tar.gz</A>  (Jan 7 2003)
+<LI><A HREF="tarball/flexbackup-0.9.9.1.tar.gz">flexbackup-0.9.9.1.tar.gz</A>  (Jan 7 2003)
 <LI><A HREF="RPMS/flexbackup-0.9.9.1-1.src.rpm">flexbackup-0.9.9.1-1.src.rpm</A>
 <LI><A HREF="RPMS/flexbackup-0.9.9.1-1.noarch.rpm">flexbackup-0.9.9.1-1.noarch.rpm</A>
+</UL>
+
+<B>Links & Info:</B>
+<UL>
+  <LI>See the <A HREF="README">README</A> file for more information.
+  <LI><A HREF="TODO">to-do</A> list
+  <LI>Running list of<A HREF="CHANGES">changes</A>
+  <LI>An attempt at starting a <A HREF="faq.html">FAQ</A>
+  <LI>Mailing lists (that we might acutally start using!)
+    <UL>
+      <LI><A HREF="http://lists.sourceforge.net/lists/listinfo/flexbackup-announce">flexbackup-announce</A>
+      <LI><A HREF="http://lists.sourceforge.net/lists/listinfo/flexbackup-help">flexbackup-help</A>
+      <LI><A HREF="http://lists.sourceforge.net/lists/listinfo/flexbackup-devel">flexbackup-devel</A>
+    </UL>
+  <LI>Sourceforge <A
+      HREF="http://sourceforge.net/projects/flexbackup">project page</A>
 </UL>
 
 <B>Related stuff:</B><BR>
@@ -38,11 +49,6 @@ Source RPM: <A HREF="other/afio-2.4.7-134.src.rpm">afio-2.4.7-134.src.rpm</A> (f
 Redhat 8.x RPM: <A HREF="other/afio-2.4.7-134.i386.rpm">afio-2.4.7-134.i386.rpm</A><BR>
 </BLOCKQUOTE>
 
-<B>Thanks:</B>
-<UL>
-<LI>John Reynolds for doing the FreeBSD package
-</UL>
-
 <B>Older versions:</B>
 <BLOCKQUOTE>
 <A HREF="tarball/">source package</A><BR>
@@ -51,8 +57,8 @@ Redhat 8.x RPM: <A HREF="other/afio-2.4.7-134.i386.rpm">afio-2.4.7-134.i386.rpm<
 </BLOCKQUOTE>
 
 <HR>
-<ADDRESS><A HREF="mailto:edwinh@computer.org">edwinh at computer dot org</A></ADDRESS>
+<ADDRESS><A HREF="mailto:flexbackup-help@lists.sourceforge.net">flexbackup-help at lists dot sourceforge dot net</A></ADDRESS>
 <!-- hhmts start -->
-Last modified: Mon Jan  6 23:56:18 MST 2003
+Last modified: Tue Jan  7 19:40:01 MST 2003
 <!-- hhmts end -->
 </BODY> </HTML>
