@@ -1,6 +1,9 @@
 $Id$
 $Name$
 
+Changes:
+  - update links/contact
+
 
 ----------------------------------------------------------------------
 Version 0.9.9.1 (20030107)
